Criacao de excecoes especificas e implementando elas